[gd_scene load_steps=7 format=3 uid="uid://bdyh467doaoc6"]

[ext_resource type="Script" path="res://UI/main_hud.gd" id="1_mcl21"]
[ext_resource type="PackedScene" uid="uid://txiqrwa1qd6f" path="res://UI/debug_menu.tscn" id="2_sw5b4"]
[ext_resource type="Texture2D" uid="uid://b6refuas6qta1" path="res://Assets/UI_icon/perezagruzka_belaya_strelka_acoebknshiip_512.png" id="3_by00o"]
[ext_resource type="Texture2D" uid="uid://dcoymcxlfpo4n" path="res://Assets/UI_icon/Pause.png" id="4_h5ayf"]
[ext_resource type="PackedScene" uid="uid://b4fk84k7nqivt" path="res://UI/DeathWindow/death_window.tscn" id="5_xt22b"]
[ext_resource type="PackedScene" uid="uid://djrel1vr6dvsd" path="res://UI/SettingsWindow/settings.tscn" id="6_ha0jh"]

[node name="MainHud" type="CanvasLayer"]
layer = 2
script = ExtResource("1_mcl21")

[node name="DebugMenu" parent="." instance=ExtResource("2_sw5b4")]
unique_name_in_owner = true

[node name="Score" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 90.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RestartScene" type="TextureButton" parent="."]
unique_name_in_owner = true
light_mask = 0
visibility_layer = 2
offset_left = 25.0
offset_top = 77.0
offset_right = 65.0
offset_bottom = 117.0
texture_normal = ExtResource("3_by00o")
ignore_texture_size = true
stretch_mode = 0

[node name="CanvasLayer2" type="CanvasLayer" parent="RestartScene"]

[node name="ColorRectForRestart" type="ColorRect" parent="RestartScene/CanvasLayer2"]
visibility_layer = 2
offset_left = 25.0
offset_top = 76.0
offset_right = 65.0
offset_bottom = 118.0

[node name="GamePause" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 124.0
offset_right = 65.0
offset_bottom = 163.0
size_flags_horizontal = 0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("4_h5ayf")
ignore_texture_size = true
stretch_mode = 0

[node name="DeathWindow" parent="." instance=ExtResource("5_xt22b")]
unique_name_in_owner = true
process_mode = 2
visible = false
offset_top = -88.0
offset_bottom = 88.0

[node name="Settings" parent="." instance=ExtResource("6_ha0jh")]
unique_name_in_owner = true
visible = false

[editable path="DeathWindow"]
[editable path="Settings"]
